make it stop looking weird on safari, temp fix

--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 }
 
 body {
+    -webkit-text-size-adjust: none;
     background-color: #000000;
     color: #ffffff;
     text-align: center;
@@ -27,6 +28,7 @@ h3 {
     font-family: 'Open Sans', sans-serif;
     font-weight: 100;
     font-size: 25px;
+    width: 100%;
     max-width: 900px;
     text-align: justify;
     text-justify: inter-word;
